second major commit

--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -35,39 +35,42 @@
     }
 </style>
 <div class="container">
-    <div id ="contact_us" class="row">
+  <div id ="contact_us" class="row">
 
-        <div class="col-md-12 colxs-12">
-
-
-            <h2 align="left" style="font-family: museo700">Contact Us</h2>
-            <hr style="height: 3px;background-color: #162e40;">
+    <div class="col-md-12 colxs-12">
 
 
+      <h2 align="left" style="font-family: museo700">Contact Us</h2>
+      <hr style="height: 3px;background-color: #162e40;">
 
 
-            <b>INA Associates</b><br>
 
-            Opp Urvasi Hotel Lane, Beside NIMS Hospital Lane,<br>
+      <div style="font-size: 1.2em;">
+        <b>Ilm School of Excellence</b><br>
 
-            Punjagutta Market, Punjagutta,<br>
+        Sanjay Nagar,<br>
 
-            Hyderabad, Telangana 500082<br>
+        Near Rehmaniya Masjid,<br>
 
-            India <br>
+        Site-1, Borabanda,<br>
 
-            Tel : +91 9395578987 (General)<br>
+        Hyderabad, Telangana<br>
 
-            Alternate No : +91 9908359597<br>
+        India <br>
 
-            Email : ali82imtiyaz@gmail.com<br><br>
+        Tel : +91 9441 281 247 (General)<br>
 
-        </div>
-        <div class="google-maps" style="border: 1px solid #d3d3d3;">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d951.5498503658001!2d78.41813228812808!3d17.45016767863356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb91182b60d3c9%3A0xff15353e7cd7b653!2sILM+School+Of+Excellence!5e0!3m2!1sen!2sin!4v1493723118284" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>        </div>
+        Alternate No : +91 9063 781 288<br>
 
-
-        <br>
+        Email : sameerilm82@gmail.com<br><br>
+      </div>
 
     </div>
+    <div class="google-maps" style="border: 1px solid #d3d3d3;">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d951.5498503658001!2d78.41813228812808!3d17.45016767863356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb91182b60d3c9%3A0xff15353e7cd7b653!2sILM+School+Of+Excellence!5e0!3m2!1sen!2sin!4v1493723118284" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>        </div>
+
+
+    <br>
+
+  </div>
 </div>
