--- a/app/views/home/gallery.html.haml
+++ b/app/views/home/gallery.html.haml
@@ -3,7 +3,7 @@
     %h2 Gallery
     %p.lead Explore our school photo gallery...
 
-  %ul.nav.nav-pills.nav-justified
+  %ul.nav.nav-pills.nav-justified#faq_nav
     %li.active
       %a{"data-toggle" => "pill", :href => "#home"} Home
     %li
@@ -12,26 +12,26 @@
       %a{"data-toggle" => "pill", :href => "#menu2"} School
     %li
       %a{"data-toggle" => "pill", :href => "#menu3"} Sports day
-  .tab-content
+  .tab-content{style:'margin-top:2%;'}
     #home.tab-pane.fade.in.active
       .row
         = (1..12).each do |i|
           .col-sm-3
-            = image_tag ('a'+i.to_s),  width:'300px',height: '200px'
+            = image_tag ('a'+i.to_s),  class:'img-responsive thumbnail'
     #menu1.tab-pane.fade
       .row
         = (1..12).each do |i|
           .col-sm-3
-            = image_tag ('a'+i.to_s),  width:'300px',height: '200px'
+            = image_tag ('a'+i.to_s),  class:'img-responsive thumbnail'
     #menu2.tab-pane.fade
       .row
         = (1..12).each do |i|
           .col-sm-3
-            = image_tag ('a'+i.to_s),  width:'300px',height: '200px'
+            = image_tag ('a'+i.to_s),  class:'img-responsive thumbnail'
     #menu3.tab-pane.fade
       .row
         = (1..12).each do |i|
           .col-sm-3
-            = image_tag ('a'+i.to_s),  width:'300px',height: '200px'
+            = image_tag ('a'+i.to_s),  class:'img-responsive thumbnail'
 
 
