--- a/app/views/home/our_staff.html.haml
+++ b/app/views/home/our_staff.html.haml
@@ -1,110 +1,115 @@
 .container
   .row.well
-    .col-sm-4
-      = image_tag 'pic.jpg'
+    .col-sm-4{align:'center'}
+      .spacing
+        = image_tag 'pic.jpg'
     .col-sm-8
       %form.form-horizontal
-        .form-group
-          %label.control-label.col-sm-2 Name:
-          .col-sm-10
-            %p.form-control-static Staff1
-        .form-group
-          %label.control-label.col-sm-2 Qualification:
-          .col-sm-10
-            %p.form-control-static B.ed
-        .form-group
-          %label.control-label.col-sm-2 Experience:
-          .col-sm-10
-            %p.form-control-static 5yrs
-        .form-group
-          %label.control-label.col-sm-2 About:
-          .col-sm-10
-            %p.form-control-static He has experience of about 5yrs in mathematics ......
+        .spacing
+          .form-group
+            %label.control-label.col-sm-2 Name:
+            .col-sm-10
+              %p.form-control-static Staff1
+          .form-group
+            %label.control-label.col-sm-2 Qualification:
+            .col-sm-10
+              %p.form-control-static B.ed
+          .form-group
+            %label.control-label.col-sm-2 Experience:
+            .col-sm-10
+              %p.form-control-static 5yrs
+          .form-group
+            %label.control-label.col-sm-2 About:
+            .col-sm-10
+              %p.form-control-static He has experience of about 5yrs in mathematics ......
 
   .row.well
-    .col-sm-4
+    .col-sm-4.spacing{align:'center'}
       = image_tag 'pic.jpg'
     .col-sm-8
       %form.form-horizontal
-        .form-group
-          %label.control-label.col-sm-2 Name:
-          .col-sm-10
-            %p.form-control-static Staff2
-        .form-group
-          %label.control-label.col-sm-2 Qualification:
-          .col-sm-10
-            %p.form-control-static B.ed
-        .form-group
-          %label.control-label.col-sm-2 Experience:
-          .col-sm-10
-            %p.form-control-static 5yrs
-        .form-group
-          %label.control-label.col-sm-2 About:
-          .col-sm-10
-            %p.form-control-static He has experience of about 5yrs in mathematics ......
+        .spacing
+          .form-group
+            %label.control-label.col-sm-2 Name:
+            .col-sm-10
+              %p.form-control-static Staff2
+          .form-group
+            %label.control-label.col-sm-2 Qualification:
+            .col-sm-10
+              %p.form-control-static B.ed
+          .form-group
+            %label.control-label.col-sm-2 Experience:
+            .col-sm-10
+              %p.form-control-static 5yrs
+          .form-group
+            %label.control-label.col-sm-2 About:
+            .col-sm-10
+              %p.form-control-static He has experience of about 5yrs in mathematics ......
 
   .row.well
-    .col-sm-4
+    .col-sm-4.spacing{align:'center'}
       = image_tag 'pic.jpg'
     .col-sm-8
       %form.form-horizontal
-        .form-group
-          %label.control-label.col-sm-2 Name:
-          .col-sm-10
-            %p.form-control-static Staff3
-        .form-group
-          %label.control-label.col-sm-2 Qualification:
-          .col-sm-10
-            %p.form-control-static B.ed
-        .form-group
-          %label.control-label.col-sm-2 Experience:
-          .col-sm-10
-            %p.form-control-static 5yrs
-        .form-group
-          %label.control-label.col-sm-2 About:
-          .col-sm-10
-            %p.form-control-static He has experience of about 5yrs in mathematics ......
+        .spacing
+          .form-group
+            %label.control-label.col-sm-2 Name:
+            .col-sm-10
+              %p.form-control-static Staff2
+          .form-group
+            %label.control-label.col-sm-2 Qualification:
+            .col-sm-10
+              %p.form-control-static B.ed
+          .form-group
+            %label.control-label.col-sm-2 Experience:
+            .col-sm-10
+              %p.form-control-static 5yrs
+          .form-group
+            %label.control-label.col-sm-2 About:
+            .col-sm-10
+              %p.form-control-static He has experience of about 5yrs in mathematics ......
+  .row.well
+    .col-sm-4.spacing{align:'center'}
+      = image_tag 'pic.jpg'
+    .col-sm-8
+      %form.form-horizontal
+        .spacing
+          .form-group
+            %label.control-label.col-sm-2 Name:
+            .col-sm-10
+              %p.form-control-static Staff2
+          .form-group
+            %label.control-label.col-sm-2 Qualification:
+            .col-sm-10
+              %p.form-control-static B.ed
+          .form-group
+            %label.control-label.col-sm-2 Experience:
+            .col-sm-10
+              %p.form-control-static 5yrs
+          .form-group
+            %label.control-label.col-sm-2 About:
+            .col-sm-10
+              %p.form-control-static He has experience of about 5yrs in mathematics ......
 
   .row.well
-    .col-sm-4
+    .col-sm-4.spacing{align:'center'}
       = image_tag 'pic.jpg'
     .col-sm-8
       %form.form-horizontal
-        .form-group
-          %label.control-label.col-sm-2 Name:
-          .col-sm-10
-            %p.form-control-static Staff4
-        .form-group
-          %label.control-label.col-sm-2 Qualification:
-          .col-sm-10
-            %p.form-control-static B.ed
-        .form-group
-          %label.control-label.col-sm-2 Experience:
-          .col-sm-10
-            %p.form-control-static 5yrs
-        .form-group
-          %label.control-label.col-sm-2 About:
-          .col-sm-10
-            %p.form-control-static He has experience of about 5yrs in mathematics ......
-
-  .row.well
-    .col-sm-4
-      = image_tag 'pic.jpg'
-    .col-sm-8
-      %form.form-horizontal
-        .form-group
-          %label.control-label.col-sm-2 Name:
-          .col-sm-10
-            %p.form-control-static Staff5
-        .form-group
-          %label.control-label.col-sm-2 Qualification:
-          .col-sm-10
-            %p.form-control-static B.ed
-        .form-group
-          %label.control-label.col-sm-2 Experience:
-          .col-sm-10
-            %p.form-control-static 5yrs
-        .form-group
-          %label.control-label.col-sm-2 About:
-          .col-sm-10
-            %p.form-control-static He has experience of about 5yrs in mathematics ......
+        .spacing
+          .form-group
+            %label.control-label.col-sm-2 Name:
+            .col-sm-10
+              %p.form-control-static Staff2
+          .form-group
+            %label.control-label.col-sm-2 Qualification:
+            .col-sm-10
+              %p.form-control-static B.ed
+          .form-group
+            %label.control-label.col-sm-2 Experience:
+            .col-sm-10
+              %p.form-control-static 5yrs
+          .form-group
+            %label.control-label.col-sm-2 About:
+            .col-sm-10
+              %p.form-control-static He has experience of about 5yrs in mathematics ......
