--- a/app/views/home/faq.html.haml
+++ b/app/views/home/faq.html.haml
@@ -1,27 +1,41 @@
 .container
   .row
     .col-sm-6
-      = image_tag 'faq.jpg'
+      = image_tag 'faq.jpg', class:'img-responsive thumbnail'
     .col-sm-6
       #accordion.panel-group
         .panel.panel-default
           .panel-heading
             %h4.panel-title
-              %a{"data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapse1"} What about Hifz?
+              %a{"data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapse3"} What is the board the school is following?
           #collapse1.panel-collapse.collapse.in
+            .panel-body
+              We are following CCE pattern i.e Continuous and comprehensive evaluation. The main aim of CCE is to evaluate every aspect of the child during their presence at the school.
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{"data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapse3"} What are the classes upto which the school supports currently?
+          #collapse2.panel-collapse.collapse
+            .panel-body
+              Currently we take admissions for students belonging to LKG, UKG and First to Eight Standard.
+        .panel.panel-default
+          .panel-heading
+            %h4.panel-title
+              %a{"data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapse1"} What about Hifz?
+          #collapse3.panel-collapse.collapse
             .panel-body
               InshaAllah Extra classes of Hifz will be started from 1st Std. (most probably early morning before the 1st period) depending upon the capability of the student.
         .panel.panel-default
           .panel-heading
             %h4.panel-title
               %a{"data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapse2"} Which school of thought will be followed?
-          #collapse2.panel-collapse.collapse
+          #collapse4.panel-collapse.collapse
             .panel-body
               Quran and Authentic Hadeeth.
         .panel.panel-default
           .panel-heading
             %h4.panel-title
               %a{"data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapse3"} What are the extra curricular activities ?
-          #collapse3.panel-collapse.collapse
+          #collapse5.panel-collapse.collapse
             .panel-body
               Excursions, Class activities, Taekwondo (from 1st Std.), Annual Sports, EPS (English Public Speaking), APS (Arabic Public Speaking) etc.
