--- a/app/views/home/admissions.html.haml
+++ b/app/views/home/admissions.html.haml
@@ -1,25 +1,24 @@
 .container
   .row
-    .col-sm-8.thumbnail
-      %div.spacing
-        %h2 Admissions
-        %p Welcome and thank you for your interest in our school. IPS absorbs candidates on a rolling admissions basis. This rolling admissions approach allows students to apply for admission  and to receive admission  at any time in the school year.
-        %p A visit of our facilities can be arranged through the main office or the Admissions Coordinator. We encourage you to visit IPS so that you may observe our excellent academic programs, student-friendly facilities, distinct student and faculty body, and co-curricular programs. Our Admissions Coordinator will gladly assist you and answer your questions.
-        %p With regards to the Admission process, we would need the following paper work and forms.
-        %ul
-          %li Application forms
-          %li Student medical form
-          %li Family info form
-          %li Official school transcript
-          %li School records of the last two years (if non-English, translation required)
-          %li Other relevant information if applicable e.g. special programmes / modified courses that your child may have followed (if non-English, translation required).
-          %li A copy of appropriate pages from the passport(s) including an Indian visa if the student is not an Indian citizen
-          %li One current passport photo from the student and one of each of the family member.
+    .col-sm-8
+      .panel.panel-primary
+        .panel-heading Admissions
+        .panel-bod{style:'margin:4%;'}
+          %p Welcome and thank you for your interest in our school. ISE absorbs candidates on a rolling admissions basis. This rolling admissions approach allows students to apply for admission  and to receive admission  at any time in the school year.
+          %p A visit of our facilities can be arranged through the main office or the Admissions Coordinator. We encourage you to visit ISE so that you may observe our excellent academic programs, student-friendly facilities, distinct student and faculty body, and co-curricular programs. Our Admissions Coordinator will gladly assist you and answer your questions.
+          %p With regards to the Admission process, we would need the following paper work and forms.
+          %ul
+            %li Application forms
+            %li Student medical form
+            %li Family info form
+            %li Official school transcript
+            %li School records of the last two years (if non-English, translation required)
+            %li Other relevant information if applicable e.g. special programmes / modified courses that your child may have followed (if non-English, translation required).
+            %li A copy of appropriate pages from the passport(s) including an Indian visa if the student is not an Indian citizen
+            %li One current passport photo from the student and one of each of the family member.
 
-    .col-sm-4.thumbnail
-      %div.spacing
-        %h3 ABOUT IPS
-        %div
-          %p{:style => "test-align:justify"}
-            %br/
-            IPS International started with a group of Dayees/Educationists/ A’alims/Teachers/Professors who joined hands together with a common vision of providing a high premium holistic education with Islamic values with appreciation of human values at affordable costs to the children
+    .col-sm-4
+      .panel.panel-primary
+        .panel-heading ABOUT ISE
+        .panel-bod{style:'margin:4%;'}
+          ISE International started with a group of Dayees/Educationists/ A’alims/Teachers/Professors who joined hands together with a common vision of providing a high premium holistic education with Islamic values with appreciation of human values at affordable costs to the children
