--- a/app/views/home/welcome.html.haml
+++ b/app/views/home/welcome.html.haml
@@ -4,13 +4,19 @@
     %li.active{"data-slide-to" => "0", "data-target" => "#myCarousel"}
     %li{"data-slide-to" => "1", "data-target" => "#myCarousel"}
     %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
+    %li{"data-slide-to" => "3", "data-target" => "#myCarousel"}
+    %li{"data-slide-to" => "4", "data-target" => "#myCarousel"}
   .carousel-inner
     .item.active
-      = image_tag "slider1.png"
+      = image_tag "slider1.jpg"
     .item
-      = image_tag "slider2.png"
+      = image_tag "slider2.jpg"
     .item
-      = image_tag "slider3.png"
+      = image_tag "slider3.jpg"
+    .item
+      = image_tag "slider4.jpg"
+    .item
+      = image_tag "slider5.jpg"
   %a.left.carousel-control{"data-slide" => "prev", :href => "#myCarousel"}
     %span.glyphicon.glyphicon-chevron-left
     %span.sr-only Previous
@@ -42,12 +48,12 @@
       %div.spacing
         %h1 About Us
         %p
-          Why IPS International?
+          Why ISE International?
           %br/
           Islamic Public School, international is the first school of its kind in India offering CBSE syllabus along with A’alim course, Hifz and Dawah
           %br/
-          IPS International started with a group of Dayees/Educationists/ A’alims/Teachers/Professors who joined hands together with a common vision of providing a high premium holistic education with Islamic values with appreciation of human values at affordable costs to the children. IPS international school has risen to be among the top schools which provide the best Islamic education. To add to this, it is the first school in India which offers CBSE syllabus along with complete A’alim course along with Hifz in optional and selective mode and Da’wah training. This school is first of its kind to lay the pillar for educational excellence with an emphasis on holistic development of learners.
-        %p At IPS International, we strive to give our children a complete Islamic and secular education. Our curriculum is set at a rigorous level that focuses on the purpose of preparing our students to reach their maximum potential. The curriculum allows for flexibility to differentiate the instruction to meet the needs of each individual because we recognize that each student is unique with their individual learning needs. Our low student/teacher ratio enables our teachers to tailor the educational experience to each child. Our ultimate goal is for every student to excel in all their future endeavors to become a Global Leader. Our curriculum objectives are adopted from the standards published by the Board of Education.
+          ISE International started with a group of Dayees/Educationists/ A’alims/Teachers/Professors who joined hands together with a common vision of providing a high premium holistic education with Islamic values with appreciation of human values at affordable costs to the children. ISE international school has risen to be among the top schools which provide the best Islamic education. To add to this, it is the first school in India which offers CBSE syllabus along with complete A’alim course along with Hifz in optional and selective mode and Da’wah training. This school is first of its kind to lay the pillar for educational excellence with an emphasis on holistic development of learners.
+        %p At ISE International, we strive to give our children a complete Islamic and secular education. Our curriculum is set at a rigorous level that focuses on the purpose of preparing our students to reach their maximum potential. The curriculum allows for flexibility to differentiate the instruction to meet the needs of each individual because we recognize that each student is unique with their individual learning needs. Our low student/teacher ratio enables our teachers to tailor the educational experience to each child. Our ultimate goal is for every student to excel in all their future endeavors to become a Global Leader. Our curriculum objectives are adopted from the standards published by the Board of Education.
 
 
 
