--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,7 +44,7 @@
                 Other
                 %span.caret
               .dropdown-content
-                %a{:href => "brochure.pdf", target:'_blank'} Brochure
+                %a{:href => "#"} Brochure
                 %a{:href => gallery_path} Gallery
                 %a{:href => faq_path} FAQ
 
