--- a/app/views/home/our_staff.html.haml
+++ b/app/views/home/our_staff.html.haml
@@ -1,115 +1,45 @@
 .container
-  .row.well
-    .col-sm-4{align:'center'}
-      .spacing
-        = image_tag 'pic.jpg'
-    .col-sm-8
-      %form.form-horizontal
-        .spacing
-          .form-group
-            %label.control-label.col-sm-2 Name:
-            .col-sm-10
-              %p.form-control-static Staff1
-          .form-group
-            %label.control-label.col-sm-2 Qualification:
-            .col-sm-10
-              %p.form-control-static B.ed
-          .form-group
-            %label.control-label.col-sm-2 Experience:
-            .col-sm-10
-              %p.form-control-static 5yrs
-          .form-group
-            %label.control-label.col-sm-2 About:
-            .col-sm-10
-              %p.form-control-static He has experience of about 5yrs in mathematics ......
+  %row
+    .col-md-offset-3.col-md-6.col-md-offset-3
+      #curriculum
+        %h2 FACULTY
+        .panel-group
+          .panel.panel-primary{style:'border-color:#269020 !important;'}
+            .panel-heading{style:'background-color:#269020 !important;'} HIGHLY QUALIFIED FACULTIES
+            .panel-bod
+              %ul
+                %li
+                  We have qualified and confident staff who has extreme love for teaching profession.
+                %li
+                  Friendly who understand the need of congenial development of child.
+                %li
+                  Excellent communication skilled with full knowledge of child psychology.
+                %li
+                  Good listener with patience and tolerance who can decode child's  learning style.
+                %li
+                  Good sense of humor with creative & flexible techniques  of child.
+                %li
+                  Makes class more fun with love and affection Our faculty is the one who understands the role of school in children's life for dynamic growth.
 
-  .row.well
-    .col-sm-4.spacing{align:'center'}
-      = image_tag 'pic.jpg'
-    .col-sm-8
-      %form.form-horizontal
-        .spacing
-          .form-group
-            %label.control-label.col-sm-2 Name:
-            .col-sm-10
-              %p.form-control-static Staff2
-          .form-group
-            %label.control-label.col-sm-2 Qualification:
-            .col-sm-10
-              %p.form-control-static B.ed
-          .form-group
-            %label.control-label.col-sm-2 Experience:
-            .col-sm-10
-              %p.form-control-static 5yrs
-          .form-group
-            %label.control-label.col-sm-2 About:
-            .col-sm-10
-              %p.form-control-static He has experience of about 5yrs in mathematics ......
+        .panel.panel-primary
+          .panel-heading LEARNING PROCESS
+          .panel-bod
+            %ul
+              %li
+                Our process of learning is enjoyable, highly motivative and playful in a very effortless manner.
+          .panel-footer
+            We implement the WHO definition of life skills which is defined as
+            %b “the ability for adaptive and positive behavior that makes individual to deal efficiently with the demands and changes of everyday life”.
 
-  .row.well
-    .col-sm-4.spacing{align:'center'}
-      = image_tag 'pic.jpg'
-    .col-sm-8
-      %form.form-horizontal
-        .spacing
-          .form-group
-            %label.control-label.col-sm-2 Name:
-            .col-sm-10
-              %p.form-control-static Staff2
-          .form-group
-            %label.control-label.col-sm-2 Qualification:
-            .col-sm-10
-              %p.form-control-static B.ed
-          .form-group
-            %label.control-label.col-sm-2 Experience:
-            .col-sm-10
-              %p.form-control-static 5yrs
-          .form-group
-            %label.control-label.col-sm-2 About:
-            .col-sm-10
-              %p.form-control-static He has experience of about 5yrs in mathematics ......
-  .row.well
-    .col-sm-4.spacing{align:'center'}
-      = image_tag 'pic.jpg'
-    .col-sm-8
-      %form.form-horizontal
-        .spacing
-          .form-group
-            %label.control-label.col-sm-2 Name:
-            .col-sm-10
-              %p.form-control-static Staff2
-          .form-group
-            %label.control-label.col-sm-2 Qualification:
-            .col-sm-10
-              %p.form-control-static B.ed
-          .form-group
-            %label.control-label.col-sm-2 Experience:
-            .col-sm-10
-              %p.form-control-static 5yrs
-          .form-group
-            %label.control-label.col-sm-2 About:
-            .col-sm-10
-              %p.form-control-static He has experience of about 5yrs in mathematics ......
+:css
+  .panel.panel-primary {
+    margin-bottom:5%;
+  }
 
-  .row.well
-    .col-sm-4.spacing{align:'center'}
-      = image_tag 'pic.jpg'
-    .col-sm-8
-      %form.form-horizontal
-        .spacing
-          .form-group
-            %label.control-label.col-sm-2 Name:
-            .col-sm-10
-              %p.form-control-static Staff2
-          .form-group
-            %label.control-label.col-sm-2 Qualification:
-            .col-sm-10
-              %p.form-control-static B.ed
-          .form-group
-            %label.control-label.col-sm-2 Experience:
-            .col-sm-10
-              %p.form-control-static 5yrs
-          .form-group
-            %label.control-label.col-sm-2 About:
-            .col-sm-10
-              %p.form-control-static He has experience of about 5yrs in mathematics ......
+  .panel-bod{
+  margin-top: 1%;
+  }
+
+  #curriculum li{
+  padding: 2%;
+  }
