--- a/app/views/home/gallery.html.haml
+++ b/app/views/home/gallery.html.haml
@@ -17,29 +17,29 @@
       .row
         -(1..9).each do |i|
           .col-sm-4
-            = image_tag ('a'+i.to_s+'.JPG'),  class:'img-responsive thumbnail'
+            = image_tag ('a'+i.to_s+'-min'+'.JPG'),  class:'img-responsive thumbnail'
       .row
         -(1..9).each do |i|
           .col-sm-4
-            = image_tag ('s'+i.to_s+'.jpg'),  class:'img-responsive thumbnail'
+            = image_tag ('s'+i.to_s+'-min'+'.jpg'),  class:'img-responsive thumbnail'
       .row
         -(1..3).each do |i|
           .col-sm-4
-            = image_tag ('p'+i.to_s+'.jpg'),  class:'img-responsive thumbnail'
+            = image_tag ('p'+i.to_s+'-min'+'.jpg'),  class:'img-responsive thumbnail'
     #menu1.tab-pane.fade
       .row
         -(1..9).each do |i|
           .col-sm-4
-            = image_tag ('a'+i.to_s+'.JPG'),  class:'img-responsive thumbnail'
+            = image_tag ('a'+i.to_s+'-min'+'.JPG'),  class:'img-responsive thumbnail'
     #menu2.tab-pane.fade
       .row
         -(1..9).each do |i|
           .col-sm-4
-            = image_tag ('s'+i.to_s+'.jpg'),  class:'img-responsive thumbnail'
+            = image_tag ('s'+i.to_s+'-min'+'.jpg'),  class:'img-responsive thumbnail'
     #menu3.tab-pane.fade
       .row
         -(1..3).each do |i|
           .col-sm-4
-            = image_tag ('p'+i.to_s+'.jpg'),  class:'img-responsive thumbnail'
+            = image_tag ('p'+i.to_s+'-min'+'.jpg'),  class:'img-responsive thumbnail'
 
 
