assets_precompile_production_v

--- a/app/views/home/faq.html.haml
+++ b/app/views/home/faq.html.haml
@@ -1,7 +1,7 @@
 .container
   .row
     .col-sm-6
-      = image_tag 'faq.jpg', class:'img-responsive thumbnail'
+      = image_tag 'a2-min.JPG', class:'img-responsive thumbnail'
     .col-sm-6
       #accordion.panel-group
         .panel.panel-default
