--- a/app/views/home/admissions.html.haml
+++ b/app/views/home/admissions.html.haml
@@ -21,4 +21,4 @@
       .panel.panel-primary
         .panel-heading ABOUT ISE
         .panel-bod{style:'margin:4%;'}
-          ISE International started with a group of Dayees/Educationists/ A’alims/Teachers/Professors who joined hands together with a common vision of providing a high premium holistic education with Islamic values with appreciation of human values at affordable costs to the children
+          ISE started with a group of Dayees/Educationists/ A’alims/Teachers/Professors who joined hands together with a common vision of providing a high premium holistic education with Islamic values with appreciation of human values at affordable costs to the children
