--- a/app/views/home/welcome.html.haml
+++ b/app/views/home/welcome.html.haml
@@ -29,15 +29,15 @@
     .col-sm-4
       .panel.panel-primary
         .panel-heading Our Mission
-        .panel-body The mission of ISE International is to provide a healthy, lively and holistic school education that will create excellence in every  lead the best life in this world and hereafter.
+        .panel-body The mission of ISE is to provide a healthy, lively and holistic school education that will create excellence in every  lead the best life in this world and hereafter.
     .col-sm-4
       .panel.panel-primary
         .panel-heading About ISE
-        .panel-body Islamic Public School, international is the first school of its kind in India offering CBSE syllabus along with A’alim course, Hifz and Dawah.
+        .panel-body Islamic School of Excellence, is the first school of its kind in India offering CBSE syllabus along with A’alim course, Hifz and Dawah.
     .col-sm-4
       .panel.panel-primary
         .panel-heading Join Us
-        .panel-body ISE International is a best and only platform which is making their students in5 languages at once, those are Arabic,English,Hindi,Telugu and Urdu.
+        .panel-body ISE is a best and only platform which is making their students in5 languages at once, those are Arabic,English,Hindi,Telugu and Urdu.
 
 
   .row{style:"margin-top:2%;"}
@@ -48,12 +48,12 @@
       %div.spacing
         %h1 About Us
         %p
-          Why ISE International?
+          Why ISE?
           %br/
-          Islamic Public School, international is the first school of its kind in India offering CBSE syllabus along with A’alim course, Hifz and Dawah
+          Islamic School of Excellence, is the first school of its kind in India offering CBSE syllabus along with A’alim course, Hifz and Dawah
           %br/
-          ISE International started with a group of Dayees/Educationists/ A’alims/Teachers/Professors who joined hands together with a common vision of providing a high premium holistic education with Islamic values with appreciation of human values at affordable costs to the children. ISE international school has risen to be among the top schools which provide the best Islamic education. To add to this, it is the first school in India which offers CBSE syllabus along with complete A’alim course along with Hifz in optional and selective mode and Da’wah training. This school is first of its kind to lay the pillar for educational excellence with an emphasis on holistic development of learners.
-        %p At ISE International, we strive to give our children a complete Islamic and secular education. Our curriculum is set at a rigorous level that focuses on the purpose of preparing our students to reach their maximum potential. The curriculum allows for flexibility to differentiate the instruction to meet the needs of each individual because we recognize that each student is unique with their individual learning needs. Our low student/teacher ratio enables our teachers to tailor the educational experience to each child. Our ultimate goal is for every student to excel in all their future endeavors to become a Global Leader. Our curriculum objectives are adopted from the standards published by the Board of Education.
+          ISE started with a group of Dayees/Educationists/ A’alims/Teachers/Professors who joined hands together with a common vision of providing a high premium holistic education with Islamic values with appreciation of human values at affordable costs to the children. ISE school has risen to be among the top schools which provide the best Islamic education. To add to this, it is the first school in India which offers CBSE syllabus along with complete A’alim course along with Hifz in optional and selective mode and Da’wah training. This school is first of its kind to lay the pillar for educational excellence with an emphasis on holistic development of learners.
+        %p At ISE, we strive to give our children a complete Islamic and secular education. Our curriculum is set at a rigorous level that focuses on the purpose of preparing our students to reach their maximum potential. The curriculum allows for flexibility to differentiate the instruction to meet the needs of each individual because we recognize that each student is unique with their individual learning needs. Our low student/teacher ratio enables our teachers to tailor the educational experience to each child. Our ultimate goal is for every student to excel in all their future endeavors to become a Global Leader. Our curriculum objectives are adopted from the standards published by the Board of Education.
 
 
 
