email and brochure

--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -62,7 +62,7 @@
 
         Alternate No : +91 9063 781 288<br>
 
-        Email : sameerilm82@gmail.com<br><br>
+        Email : care.ilmschool@gmail.com<br><br>
       </div>
 
     </div>
